--- a/Client/Pages/ProfilePage.razor
+++ b/Client/Pages/ProfilePage.razor
@@ -27,6 +27,26 @@
         <div id="mainUserInfo">
             @if (editBtnClicked)
             {
+                <div>
+                    <div>שם פרטי:</div><br/>
+                    <input type="text" maxlength="15" @oninput="firstNameLengthCheck" placeholder="@currentUser.firstName"/>
+                    @if (newFirstNameLength>0)
+                    {
+                        <span>@newFirstNameLength/15</span>
+                    }else{
+                        <span style="color:red">@newFirstNameLength/15</span>
+                    }
+                    <div>שם משפחה:</div>
+                    <input type="text" maxlength="15" @oninput="lastNameLengthCheck" placeholder="@currentUser.lastName" />
+                    @if (newLastNameLength > 0)
+                    {
+                        <span>@newLastNameLength/15</span>
+                    }
+                    else
+                    {
+                        <span style="color:red">@newLastNameLength/15</span>
+                    }
+                </div>
                 <div class="keyBoardAndBtn">
                     <div class="outerCancleAndEmoji">
                         @if (currentUser.profilePicOrIcon.Length > 0)
@@ -68,7 +88,7 @@
                         </div>
                         <div class="emoji-section">
 
-                            <span @onclick="() => SelectEmoji(currentUser.profilePicOrIcon)" class="emoji">@currentUser.profilePicOrIcon</span>
+                            <div @onclick="() => SelectEmoji(currentUser.profilePicOrIcon)" class="emoji">@currentUser.profilePicOrIcon</div>
 
                         </div>
                     </div>
@@ -77,12 +97,12 @@
             }
             else
             {
-                <p>@currentUser.profilePicOrIcon</p>
-                <p>@currentUser.firstName @currentUser.lastName</p>
+                <div>@currentUser.profilePicOrIcon</div>
+                <div>@currentUser.firstName @currentUser.lastName</div>
 
                 <AuthorizeView>
                     <Authorized>
-                        <p>@context.User.Identity.Name</p>
+                        <div>@context.User.Identity.Name</div>
                     </Authorized>
                 </AuthorizeView>
 
@@ -95,33 +115,51 @@
         </div>
     </div>
     <div>
-        <p>יום תחילת תזרים:</p>
+        <div>יום תחילת תזרים:</div>
         <div>
-            @*        <div>
-        <button class="dropDownOptionBtn" @onclick="@(()=>startMonthDate=1)">ה-1 לחודש</button>
-        <div class="divider"></div>
-        <button class="dropDownOptionBtn" @onclick="@(()=>startMonthDate=2)">ה-2 לחודש</button>
-        <div class="divider"></div>
-        <button class="dropDownOptionBtn" @onclick="@(()=>startMonthDate=10)">ה-10 לחודש</button>
-        <div class="divider"></div>
-        <button class="dropDownOptionBtn" @onclick="@(()=>startMonthDate=15)">ה-15 לחודש</button>
-        </div>*@
-            <select @bind="currentUser.monthStartDate">
-                <option value="ה-1 לחודש" @onclick="@(()=>currentUser.monthStartDate=1)"></option>
-                <option value="ה-2 לחודש" @onclick="@(()=>currentUser.monthStartDate=2)"></option>
-                <option value="ה-10 לחודש" @onclick="@(()=>currentUser.monthStartDate=10)"></option>
-                <option value="ה-15 לחודש" @onclick="@(()=>currentUser.monthStartDate=15)"></option>
-            </select>
+            <div>
+                @if (startMonthDate > 0)
+                {
+                    <span> ה - @startMonthDate לחודש</span>
+                }
+                else
+                {
+                    <span> ה - @currentUser.monthStartDate לחודש</span>
+                }
+            </div>
+            <div>
+                <button class="dropDownOptionBtn" @onclick="@(()=>startMonthDate=1)">ה-1 לחודש</button>
+                <div class="divider"></div>
+                <button class="dropDownOptionBtn" @onclick="@(()=>startMonthDate=2)">ה-2 לחודש</button>
+                <div class="divider"></div>
+                <button class="dropDownOptionBtn" @onclick="@(()=>startMonthDate=10)">ה-10 לחודש</button>
+                <div class="divider"></div>
+                <button class="dropDownOptionBtn" @onclick="@(()=>startMonthDate=15)">ה-15 לחודש</button>
+            </div>
+            @*            <select @bind="currentUser.monthStartDate">
+        <option value="ה-1 לחודש" @onclick="@(()=>currentUser.monthStartDate=1)"></option>
+        <option value="ה-2 לחודש" @onclick="@(()=>currentUser.monthStartDate=2)"></option>
+        <option value="ה-10 לחודש" @onclick="@(()=>currentUser.monthStartDate=10)"></option>
+        <option value="ה-15 לחודש" @onclick="@(()=>currentUser.monthStartDate=15)"></option>
+        </select>*@
         </div>
     </div>
     <div>
-        <p>תאריך הרשמה:</p>
-        <p>@currentUser.signUpDate</p>
+        <div>תאריך הרשמה:</div>
+        <div>@currentUser.signUpDate</div>
     </div>
     <div>
-        <p>התגיות שלי</p>
+        <div>התגיות שלי</div>
+        <div>
+            @if (editBtnClicked)
+            {
+                <button @onclick="openEditOrAddTagOverlay">הוספת תגית</button>
+                <br />
+            }
+        </div>
         <div class="outerGalleryAndNav">
             <div class="outerGallery">
+
                 @if (currentUser.userTags.Count > 0)
                 {
                     foreach (TagsToShow tag in currentUser.userTags)
@@ -132,12 +170,19 @@
                     style="background-color:@tag.tagColor; @fontWeight">
                             @tag.tagTitle
                         </button>
-                        <button class="options" @onclick="()=>OptionsBtnClicked=!OptionsBtnClicked"><img src="../css/images/option menu.svg" /></button>
+                        @if (editBtnClicked)
+                        {
+                            <button class="options" @onclick="()=>OptionsBtnClicked=!OptionsBtnClicked"><img src="../css/images/option menu.svg" /></button>
+                        }
+
                     }
-                    @if (OptionsBtnClicked)
+
+                    if (OptionsBtnClicked)
                     {
                         <OptionsMenuComponent editBtnClicked="openEditOrAddTagOverlay" deleteBtnClicked="callDeleteWarning" closeOverlay="()=>openDeleteTagWarning(true)"></OptionsMenuComponent>
                     }
+
+
                     <div class="outerBtnAndDots">
                         <button class="galleryArrow @disBtnStyle" @onclick="PreviousPage"><img src="../css/images/arrow-back.svg" /></button>
                         <div class="pageDots">
@@ -160,12 +205,12 @@
 <div>
     @if (editBtnClicked)
     {
-         <br />
-        <button value="שמירה וחזרה" @onclick="(()=>saveEditedProfile(currentUser))"></button>
+        <br />
+        <button @onclick="(()=>saveEditedProfile(currentUser))">שמירה וחזרה</button>
     }
     else
     {
-        <p>מעבר מחדש על ההדרכה</p>
+        <div>מעבר מחדש על ההדרכה</div>
         <div>
             <button class="dropDownOptionBtn">סביבת ‘מבט אל העבר’</button>
             <div class="divider"></div>
@@ -176,55 +221,87 @@
         <br />
         <button @onclick="BeginSignOut">התנתקות מהמערכת</button>
     }
-   
+
 </div>
 
 @if (editTag)
 {
     <div>
-        @if (tagToEdit.id>0)
+        @if (tagToEdit.id > 0)
         {
             <h3>עריכת תגית</h3>
-            <input type="text" placeholder="@chosenTag.tagTitle" @bind="tagToEdit.tagTitle" />
+            <div>שם התגית:</div>
+            <input type="text" placeholder="@chosenTag.tagTitle" @oninput="tagTitleLengthCheck" maxlength="8" />
+            @if (tagTitleInputLength == 0)
+            {
+                <span>@chosenTag.tagTitle.Length/8</span>
+            }
+            else
+            {
+                <span>@tagTitleInputLength/8</span>
+            }
+
         }
         else
         {
             <h3>הוספת תגית</h3>
-            <input type="text" @bind="tagToEdit.tagTitle" />
+            <div>שם התגית:</div>
+            <input type="text" @oninput="tagTitleLengthCheck" maxlength="8" />
+            @if (tagToEdit.tagTitle.Length <= 0)
+            {
+                <span style="color:red">@tagTitleInputLength/8</span>
+            }
+            else
+            {
+                <span>@tagTitleInputLength/8</span>
+            }
+
         }
+        <div>
+            <div>צבע התגית:</div>
+            <div class="outerColors">
 
-        <div class="outerColors">
-            <div class="colorsContainer">
-                <div class="colorsRow">
-                    @foreach (var color in new[] { "#F4B367", "#AEA2F9", "#F467AB", "#F47867", "#6775F4", "#8DE4BF" })
-                    {
-                        <div id="@(color)" class="@(selectedClass == color ? "color-selected" : "")">
-                            <input style="opacity:0;" type="radio" name="categoryColors" value="@color"
-                           @onclick="() => UpdateColor(color)" />
+                <div class="colorsContainer">
+                    <div class="colorsRow">
+                        @foreach (var color in new[] { "#F4B367", "#AEA2F9", "#F467AB", "#F47867", "#6775F4", "#8DE4BF" })
+                        {
+                            <div id="@(color)" class="@(selectedClass == color ? "color-selected" : "")">
+                                <input style="opacity:0;" type="radio" name="categoryColors" value="@color"
+                               @onclick="() => UpdateColor(color)" />
 
-                        </div>
-                    }
-                </div>
-                <div class="colorsRow">
-                    @foreach (var color in new[] { "#67CAF4", "#FCE884", "#F9D3C2", "#16A78D", "#696969", "#DADADA" })
-                    {
-                        <div id="@(color)" class="@(selectedClass == color ? "color-selected" : "")">
-                            <input style="opacity:0;" type="radio" name="categoryColors" value="@color"
-                           @onclick="() => UpdateColor(color)" />
+                            </div>
+                        }
+                    </div>
+                    <div class="colorsRow">
+                        @foreach (var color in new[] { "#67CAF4", "#FCE884", "#F9D3C2", "#16A78D", "#696969", "#DADADA" })
+                        {
+                            <div id="@(color)" class="@(selectedClass == color ? "color-selected" : "")">
+                                <input style="opacity:0;" type="radio" name="categoryColors" value="@color"
+                               @onclick="() => UpdateColor(color)" />
 
-                        </div>
-                    }
+                            </div>
+                        }
+                    </div>
                 </div>
             </div>
+            <br />
         </div>
-        <br/>
+
         @if (tagToEdit.id > 0)
         {
             <button @onclick="updateTag">שמירה וסיום</button>
         }
         else
         {
-            <button @onclick="addTag">שמירה וסיום</button>
+            if (tagToEdit.tagTitle.Length > 0 && tagToEdit.tagColor.Length > 0)
+            {
+                <button @onclick="addTag">שמירה וסיום</button>
+            }
+            else
+            {
+                <button @onclick="addTag" disabled>שמירה וסיום</button>
+            }
+
         }
 
     </div>
@@ -233,9 +310,9 @@
 
 @if (deleteTagWarning)
 {
-   
-        string msg = "התגית " + @chosenTag.tagTitle + " עומדת להמחק.";
-    
+
+    string msg = "התגית " + @chosenTag.tagTitle + " עומדת להמחק.";
+
     <GeneralPopUpComponent popupTypeTitle="מחיקת תגית" middleText="@msg" action="מחיקה" makeAction="deleteTag" closePopUp="closeDeleteWarning"></GeneralPopUpComponent>
 }
 
@@ -255,6 +332,8 @@
     public bool closeOverlay = false;
 
     public int startMonthDate = 0;
+    string newFirstName="";
+    string newLastName = "";
 
     //Tag gallery variables:
     TagsToShow chosenTag = new TagsToShow();
@@ -304,7 +383,8 @@
     string selectedClass = "";
     bool deleteTagWarning = false;
     bool OptionsBtnClicked = false;
-    //TagsToShow tagToAdd = new TagsToShow();
+
+    int tagTitleInputLength = 0;
 
 
     //------
@@ -331,7 +411,8 @@
                     startMonthDate = 15;
                     break;
             }
-
+            newFirstNameLength=currentUser.firstName.Length;
+            newLastNameLength = currentUser.lastName.Length;
             onInitializedOver = true;
         }
     }
@@ -434,6 +515,18 @@
 
     public async Task saveEditedProfile(userProfileDataToShow updatedUser)
     {
+        if (startMonthDate > 0)
+        {
+            updatedUser.monthStartDate = startMonthDate;
+        }
+        if (newFirstName!="" && newFirstName!=currentUser.firstName)
+        {
+            currentUser.firstName = newFirstName;
+        }
+        if (newLastName != "" && newLastName != currentUser.lastName)
+        {
+            currentUser.lastName = newLastName;
+        }
         var updateUserRec = await Http.PostAsJsonAsync("api/Present/updateUser", updatedUser);
         if (updateUserRec.IsSuccessStatusCode)
         {
@@ -443,13 +536,13 @@
             int deletedTagsCounter = 0;
             foreach (int tagIDtoDelete in tagsToDeleteRes)
             {
-                var deleteTagsRec = await Http.DeleteAsync("api/Present/deleteTags/"+tagIDtoDelete);
+                var deleteTagsRec = await Http.DeleteAsync("api/Present/deleteTags/" + tagIDtoDelete);
                 if (deleteTagsRec.IsSuccessStatusCode)
                 {
                     deletedTagsCounter++;
                 }
             }
-            if (deletedTagsCounter==tagsToDeleteRes.Count)
+            if (deletedTagsCounter == tagsToDeleteRes.Count)
             {
                 editBtnClicked = false;
             }
@@ -463,14 +556,21 @@
     public void openEditOrAddTagOverlay()
     {
         editTag = !editTag;
-        if (chosenTag.id>0)
+        if (chosenTag.id > 0)
         {
             tagToEdit.id = chosenTag.id;
         }
+        else
+        {
+            tagToEdit = new TagsToShow();
+            tagToEdit.id = 0;
+        }
+        Console.WriteLine("Tag to edit data- " + tagToEdit.id + ", " + tagToEdit.tagTitle);
     }
 
     private void UpdateColor(string color)
     {
+
         if (selectedClass == color)
         {
             // If the color is already selected, unselect it
@@ -488,7 +588,7 @@
     public void updateTag()
     {
         int editedTag = currentUser.userTags.IndexOf(chosenTag);
-        currentUser.userTags[editedTag].id=tagToEdit.id;
+        currentUser.userTags[editedTag].id = tagToEdit.id;
         currentUser.userTags[editedTag].tagTitle = tagToEdit.tagTitle;
         currentUser.userTags[editedTag].tagColor = tagToEdit.tagColor;
         tagToEdit = new TagsToShow();
@@ -521,7 +621,7 @@
     public void deleteTag()
     {
         Console.WriteLine("delete clicked, tag title- " + chosenTag.tagTitle);
-        for (int i=currentUser.userTags.Count-1; i>-1; i--)
+        for (int i = currentUser.userTags.Count - 1; i > -1; i--)
         {
             if (currentUser.userTags[i] == chosenTag)
             {
@@ -530,6 +630,27 @@
         }
         openDeleteTagWarning(true);
         OptionsBtnClicked = !OptionsBtnClicked;
+    }
+
+    private void tagTitleLengthCheck(ChangeEventArgs e)
+    {
+        tagToEdit.tagTitle = e.Value.ToString();
+        tagTitleInputLength = tagToEdit.tagTitle.Length;
+
+    }
+
+    int newFirstNameLength = 0;
+    int newLastNameLength = 0;
+    private void firstNameLengthCheck(ChangeEventArgs e)
+    {
+        newFirstName = e.Value.ToString();
+        newFirstNameLength = newFirstName.Length;
+    }
+
+    private void lastNameLengthCheck(ChangeEventArgs e)
+    {
+        newLastName=e.Value.ToString();
+        newLastNameLength = newLastName.Length;
     }
 
     public void goToStreakPage()
